objects/PQM_Buyer_Code_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Buyer Code Mapping</label>
    <fields>
        <fullName>PQM_CDSid__c</fullName>
        <label>CDSid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQM_UserID__c</fullName>
        <label>UserID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQM_User_Name__c</fullName>
        <label>Name of the user</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>